Added relative links to index file

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     To view the different sections of my portfolio, please visit the links below:
 
     <ul>
-        <li>Click here to visit my bio!</li>
+        <li>Click <a href = "../hezbranch/bio.html"> here</a> to visit my bio!</li>
             </br>
-        <li>Click here to visit my resume!</li>
+        <li>Click <a href = "../hezbranch/resume.html"> here</a> to visit my resume!</li>
     </ul>
 </body>
 
