Fixing validation errors

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html>
 
 <head>
+    <title>
+        Hezekiah J. Branch
+    </title>
     <h1> Welcome to my Portfolio! </h1>
 </head>
 
@@ -17,7 +20,6 @@
 
     <ul>
         <li>Click <a href = "../hezbranch/bio.html"> here</a> to visit my bio!</li>
-            </br>
         <li>Click <a href = "../hezbranch/resume.html"> here</a> to visit my resume!</li>
     </ul>
 </body>
