--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="en">
 
 <head>
     <title>
@@ -23,8 +23,6 @@
         <li>Click <a href = "../hezbranch/resume.html"> here</a> to visit my resume!</li>
     </ul>
 </body>
-
-
 
 
 </html>
