Fixing validation errors

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     To view the different sections of my portfolio, please visit the links below:
 
     <ul>
-        <li>Click <a href = "../hezbranch/bio.html"> here</a> to visit my bio!</li>
-        <li>Click <a href = "../hezbranch/resume.html"> here</a> to visit my resume!</li>
+        <li>Click <a href = "bio.html"> here</a> to visit my bio!</li>
+        <li>Click <a href = "resume.html"> here</a> to visit my resume!</li>
     </ul>
 </body>
 
