--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <html lang="en">
 
 <head>
-    <title>
-        Hezekiah J. Branch
-    </title>
-    <h1> Welcome to my Portfolio! </h1>
+    <title>Hezekiah J. Branch </title>
 </head>
 
 <body>
+    <h1> Welcome to my Portfolio! </h1>
+
     My name is Hezekiah Branch. It's a pleasure to have you on my site. 
 
     <p>
