Adding more details

--- a/resume.html
+++ b/resume.html
@@ -10,34 +10,88 @@
 </head>
 
 <body>
+    Name: Hezekiah Branch <br/> <br/>
+    Location: Boston, MA <br/> <br/>
+    GitHub: <a href = "https://github.com/hezbranch"> github.com/hezbranch</a> 
     <ul>
         <li>Research Interests: 
             <ul>
                 <li>Distributional Semantics</li>
                 <li>Machine Learning</li>
                 <li>Computational Neuroscience</li>
+                <li>Network Science</li>
+                <li>Health Data Science</li> 
             </ul>
         </li>
         <li>Company: IBM Research</li>
-        <li>Alma Mater: Tufts University (CogSci grad!)</li>
-        <li>Favorite TV Shows:
+        <li>Education:
             <ul>
-                <li> Doom Patrol</li>
-                <li> Yu Yu Hakusho</li>
-                <li> Assassination Classroom</li>
-                <li> Batman: The Animated Series</li>
-                <li> Lovecraft Country</li>
+                <li> Tufts University, M.S. in Data Science (Fall 2021)</li>
+                <li> Tufts University, B.S. in Cognitive and Brain Sciences (2017 to 2021)</li>
+                <li> DataCamp, Machine Learning Scientist Track (2020 to 2021)</li>
+                <li> Midlands Technical College, Mobile Development (2014 to 2016) </li>
             </ul>
         </li>
-        <li>Favorite Dishes to Cook:
+        <li>Relevant Coursework:
             <ul>
-                <li> Southern-Style Baked Mac and Cheese</li>
-                <li> Roti with curry chicken</li>
-                <li> Sweet Bread</li>
-                <li> Sponge Cake</li>
-                <li> Trinidad Bhaji with Pepper</li>
+                <li> Software Engineering (COMP 150)</li>
+                <li> Data Science for Sustainability (COMP 152)</li>
+                <li> Ecological Statistics and Modeling (BIO 133)</li>
+                <li> Numerical Linear Algebra (MATH 126)</li>
+                <li> Web Engineering (COMP 120)</li>
+                <li> Algorithms (COMP 160)</li>
+                <li> Network Science (COMP 150)</li>
+                <li> Computational Models in Cognitive Science (COMP 150)</li> 
             </ul>
         </li>
+        <li>Professional Experiences:
+            <ul>
+                <li> Research Scientist, IBM Research</li>
+                <li> Data Science Fellow, Correlation One</li>
+                <li> CSRMP, Google Research</li>
+                <li> Computational Research Intern, Tufts School of Medicine</li>
+                <li> Product Management Intern, Prudential Financial</li>
+                <li> Software Engineering Extern, IBM </li>
+                <li> Computational Research Intern, Tufts Human Interaction Lab</li>
+                <li> Data Science Intern, Prudential Financial</li>
+                <li> Fab Lab Intern, Massachusetts Institute of Technology</li>
+                <li> Program Development Intern, Harvard Graduate School of Education</li>
+            </ul>
+        </li>
+        <li>Skills:
+            <ul>
+                <li> Programming Languages: C++, Python, R, JavaScript, Swift, MATLAB</li>
+                <li> Databases:
+                    <ul>
+                        <li> Relational Databases, NoSQL Databases, Advanced Queries, File Stores, Migration</li>
+                        <li> Flavors: SQL, MySQL, Oracle, PostgreSQL, MongoDB, Hive, Cassandra, Spark SQL</li>
+                </li>
+                <li> Analytics and Data Science:
+                    <ul>
+                        <li> Data Wrangling, Data Visualization, Data Warehousing, Scripting, Web Scraping</li>
+                        <li> Bayesian Modeling, Network Science, REST API, Spark/MapReduce/Hadoop</li>
+                        <li> Packages: scipy, pandas, numpy, matplotlib, seaborn, plotly, networkx, tidyverse</li>
+                        <li> Tools: Adobe Analytics, Google Analytics, Jupyter Notebook, KNIME, Tableau</li>
+                    </ul>
+                </li>
+                <li> AI & Machine Learning:
+                    <ul>
+                        <li> Regression, Classification, Naïve Bayes, CART, Random Forest, SVM, SVD, PCA</li>
+                        <li> Neural Networks, Optimization, Deep Learning, Chatbots, NLP, Cognitive Modeling</li>
+                        <li> Packages: scikit-learn, pytorch, tensorflow, keras, spark.ml, jags</li>
+                    </ul>
+                </li>
+                <li> Research:
+                    <ul>
+                        <li> Experimenting, Multivariate Statistics, Numerical Linear Algebra, A/B Testing, Reporting</li>
+                        <li> Methods: Time Series, Factor Analysis, Logistic Regression, Hypothesis Testing</li>
+                        <li> Tools: Qualtrics, Microsoft Excel, Stata, SAS, Tableau, Mechanical Turk, LaTeX</li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li>Activities: Black in AI, NSBE, Jopwell, SEO Edge Career, Code2040 Fellows, IBM Accelerate, Boston Product Managers</li>
     </ul>
+<br/>
 </body>
 </html>
