Adding more details

--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,7 @@
                         <li> Data Wrangling, Data Visualization, Data Warehousing, Scripting, Web Scraping</li>
                         <li> Bayesian Modeling, Network Science, REST API, Spark/MapReduce/Hadoop</li>
                         <li> Packages: scipy, pandas, numpy, matplotlib, seaborn, plotly, networkx, tidyverse</li>
-                        <li> Tools: Adobe Analytics, Google Analytics, Jupyter Notebook, KNIME, Tableau</li>
+                        <li> Tools: Adobe Analytics, Google Cloud Platform, Jupyter Notebook, KNIME, Tableau</li>
                     </ul>
                 </li>
                 <li> AI & Machine Learning:
@@ -92,6 +92,5 @@
         </li>
         <li>Activities: Black in AI, NSBE, Jopwell, SEO Edge Career, Code2040 Fellows, IBM Accelerate, Boston Product Managers</li>
     </ul>
-<br/>
 </body>
 </html>
