Added acccomplishments to experience

--- a/resume.html
+++ b/resume.html
@@ -46,16 +46,61 @@
         </li>
         <li>Professional Experiences:
             <ul>
-                <li> Research Scientist, IBM Research</li>
-                <li> Data Science Fellow, Correlation One</li>
-                <li> CSRMP, Google Research</li>
-                <li> Computational Research Intern, Tufts School of Medicine</li>
-                <li> Product Management Intern, Prudential Financial</li>
-                <li> Software Engineering Extern, IBM </li>
-                <li> Computational Research Intern, Tufts Human Interaction Lab</li>
-                <li> Data Science Intern, Prudential Financial</li>
-                <li> Fab Lab Intern, Massachusetts Institute of Technology</li>
-                <li> Program Development Intern, Harvard Graduate School of Education</li>
+                <li> Research Scientist, IBM Research
+                    <ul>
+                        <li>Developing supervised learning algorithm for graph embeddings (biconvex optimization)</li>
+                    </ul>
+                </li>
+                <li> Data Science Fellow, Correlation One
+                    <ul>
+                        <li>Investigating most relevant predictors for patient retention at Dana-Farber Cancer Institute (DFCI)</li>
+                    </ul>
+                </li>
+                <li> CSRMP, Google Research
+                    <ul>
+                        <li> Designed NLP dual-route decomposition algorithm facilitated by feedback on interaction networks</li>
+                    </ul>
+                </li>
+                <li> Machine Learning Engineer, Tufts University
+                    <ul>
+                        <li>Led development of text localization feature for curved image data with LSTM neural network</li>
+                    </ul>
+                </li>
+                <li> Computational Research Intern, Tufts School of Medicine
+                    <ul>
+                        <li>Modeled SHP2 protein for predicting tumor growth in GBM with a focus on interpretable ML</li>
+                    </ul>
+                </li>
+                <li> Product Management Intern, Prudential Financial
+                    <ul>
+                        <li>Led rule-based data logic feature for enterprise Salesforce platform</li>
+                    </ul>
+                </li>
+                <li> Software Engineering Extern, IBM 
+                    <ul>
+                        <li> Created IBM's first summer networking series for HBCU coding boot camp students</li>
+                    </ul>
+                </li>
+                <li> Computational Research Intern, Tufts Human Interaction Lab
+                    <ul>
+                        <li> Wrote script to convert phoneme boundaries from audio stimuli to annotated CSV files for analysis</li>
+                    </ul>
+                </li>
+                <li> Data Science Intern, Prudential Financial
+                    <ul>
+                        <li> Developed scripts to detect fraud for over 500 TB of Hadoop cluster health data</li>
+                    </ul>
+                </li>
+                <li> Fab Lab Intern at South End Tech Center, Massachusetts Institute of Technology
+                    <ul>
+                        <li> Assisted with research to transition formerly incarcerated persons into the workforce through engineering</li>
+                    </ul>
+                </li>
+                <li> Program Development Intern, Harvard Graduate School of Education
+                    <ul>
+                        <li> Managed three professional education programs for world's leading education program</li>
+                    </ul>
+                </li>
             </ul>
         </li>
         <li>Skills:
