"Add CSS W3C Validation badge"

--- a/resume.html
+++ b/resume.html
@@ -138,5 +138,14 @@
         </li>
         <li>Activities: Black in AI, NSBE, Jopwell, SEO Edge Career, Code2040 Fellows, IBM Accelerate, Boston Product Managers</li>
     </ul>
+
+    <p>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px"
+                src="https://jigsaw.w3.org/css-validator/images/vcss"
+                alt="Valid CSS!" />
+        </a>
+    </p>
+          
 </body>
 </html>
