--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,7 @@
         </li>
         <li>Professional Experiences:
             <ul>
-                <li> Research Scientist, IBM Research
+                <li> Graduate Researcher, IBM Research
                     <ul>
                         <li>Developing supervised learning algorithm for graph embeddings (biconvex optimization)</li>
                     </ul>
