--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <ul>
         <li>Click <a href = "bio.html"> here</a> to visit my bio!</li>
         <li>Click <a href = "resume.html"> here</a> to visit my resume!</li>
+        <li>Click <a href = "samples.html"> here</a> to visit my work samples!</li>
     </ul>
 </body>
 
