--- a/samples.html
+++ b/samples.html
@@ -13,7 +13,7 @@
    <h1>PDF Example</h1>
     <p>
       <ul>
-      <li> Analytics & Data Science <a href="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf">Analyzing Disney Movie Trends</a>.</li>
+      <li> Analytics & Data Science <a href="https://drive.google.com/file/d/14Zm8xXs-MA0rm5TtODojGnFb93BzMI-r/view?usp=sharing">Analyzing Disney Movie Trends</a>.</li>
       </ul>
     </p> 
       
