--- a/samples.html
+++ b/samples.html
@@ -10,12 +10,27 @@
 </head>
 
 <body>
-   <h1>PDF Example</h1>
+   <h1> Work Samples </h1>
     <p>
+        <font size="+2">
       <ul>
-      <li> Analytics & Data Science <a href="https://drive.google.com/file/d/14Zm8xXs-MA0rm5TtODojGnFb93BzMI-r/view?usp=sharing">Analyzing Disney Movie Trends</a>.</li>
+      <li> Analytics & Data Science
+       <ul>
+           <br/>
+       <li>
+       <a href="samples/Branch_Disney_Assignment.html">Analyzing Disney Movie Trends</a> <br/> <br/>
+       Description: <br/>
+           Business Context. For this case, students are working as a data analytics consultant for The Walt Disney Studios,
+           one of the "Big Five" major film studios located in Burbank, CA. The team recruiting has manually kept track of
+           metrics and attributes associated with each film produced from 1937 to 2016. As their new data scientist, students
+           have been tasked with the question: "Which films have been the most lucrative for our studios and how can we use
+           their success as a signal for driving sales forward?"
+       </li>
+           </ul>
+        </li>
       </ul>
-    </p> 
+    </p>
+        </font>
       
 </body>
 </html>
